Fixed an issue where foreign data wrapper properties are not visible if the host option contains two host addresses. Fixes #6379

--- a/web/pgadmin/tools/sqleditor/static/scss/_sqleditor.scss
+++ b/web/pgadmin/tools/sqleditor/static/scss/_sqleditor.scss
@@ -52,6 +52,8 @@
 
 #editor-panel {
   z-index: 0;
+  position: absolute;
+  top: $sql-editor-panel-top;
   bottom: 0;
   left: 0;
   right: 0;
